--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   "types": "dist/index.d.ts",
   "type": "module",
   "scripts": {
+    "build": "rimraf dist && tsup",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "publishConfig": {
-    "access": "restricted"
+    "access": "public"
   },
   "keywords": [
     "data-structures",
@@ -30,5 +31,12 @@
     "coding-tools"
   ],
   "author": "Igor Snitkin <sudo@snigo.dev>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^20.12.2",
+    "rimraf": "^5.0.5",
+    "tslib": "^2.6.2",
+    "tsup": "^8.0.2",
+    "typescript": "^5.4.3"
+  }
 }
