--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "format": "prettier --write src",
     "lint": "tsc --noEmit && eslint --ext .ts src",
     "lint:fix": "tsc --noEmit && eslint --ext .ts src --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint:staged": "lint-staged",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky"
   },
   "publishConfig": {
     "access": "public"
@@ -39,6 +41,8 @@
     "@gigwork/eslint-config-service": "^0.1.3",
     "@types/node": "^20.12.2",
     "eslint": "^8.57.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
     "tslib": "^2.6.2",
