--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "tsc --noEmit && eslint --ext .ts src",
     "lint:fix": "tsc --noEmit && eslint --ext .ts src --fix",
     "lint:staged": "lint-staged",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "glob -c \"node --import tsx --test\" \"src/tests/*.test.ts\"",
     "prepare": "husky"
   },
   "publishConfig": {
@@ -41,12 +41,14 @@
     "@gigwork/eslint-config-service": "^0.1.3",
     "@types/node": "^20.12.2",
     "eslint": "^8.57.0",
+    "glob": "^10.3.12",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
     "tslib": "^2.6.2",
     "tsup": "^8.0.2",
+    "tsx": "^4.7.1",
     "typescript": "^5.4.3"
   }
 }
