--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
   "license": "MIT",
   "devDependencies": {
     "@gigwork/eslint-config-service": "^0.1.4",
+    "@types/fnv-plus": "^1.3.2",
+    "@types/imurmurhash": "^0.1.4",
     "@types/node": "^20.12.2",
     "eslint": "^8.57.0",
     "glob": "^10.3.12",
@@ -50,5 +52,9 @@
     "tsup": "^8.0.2",
     "tsx": "^4.7.1",
     "typescript": "^5.4.3"
+  },
+  "dependencies": {
+    "fnv-plus": "^1.3.1",
+    "imurmurhash": "^0.1.4"
   }
 }
