--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "build": "rimraf dist && tsup",
     "format": "prettier --write src",
-    "lint": "tsc --noEmit && eslint --ext .ts src",
-    "lint:fix": "tsc --noEmit && eslint --ext .ts src --fix",
+    "lint": "tsc --noEmit && eslint src",
+    "lint:fix": "tsc --noEmit && eslint src --fix",
     "lint:staged": "lint-staged",
     "test": "glob -c \"node --import tsx --test\" \"src/tests/*.test.ts\"",
     "prepare": "husky"
@@ -38,7 +38,6 @@
   "author": "Igor Snitkin <sudo@snigo.dev>",
   "license": "MIT",
   "devDependencies": {
-    "@gigwork/eslint-config-service": "^0.1.4",
     "@types/fnv-plus": "^1.3.2",
     "@types/imurmurhash": "^0.1.4",
     "@types/node": "^20.12.2",
@@ -54,6 +53,7 @@
     "typescript": "^5.4.3"
   },
   "dependencies": {
+    "@gigwork/eslint-config-service": "^1.0.3",
     "fnv-plus": "^1.3.1",
     "imurmurhash": "^0.1.4"
   }
